[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "upayapi"
version = "0.1.0"
description = "FastAPI implementation of uPay posting endpoint"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "GPL-3.0-or-later"}
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
    "sqlalchemy",
    "alembic",
    "python-dotenv",
    "python-multipart",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pyright",
    "hatchling",
]

[tool.ruff]
target-version = "py312"
line-length = 88
select = ["E", "F", "B", "I", "N", "UP", "ANN", "RUF", "FA"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownLambdaType = false
reportUntypedFunctionDecorator = false

[tool.hatch.metadata]
allow-direct-references = true
