[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "upayapi"
version = "0.1.0"
description = "FastAPI implementation of uPay posting endpoint"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "GPL-3.0-or-later"}
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "pydantic-settings",
    "sqlalchemy",
    "alembic",
    "python-dotenv",
    "python-multipart",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pyright",
    "hatchling",
    "pytest",
    "httpx",
]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["FAST", "F401"]

[tool.ruff.format]

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
reportUnknownLambdaType = false
reportUntypedFunctionDecorator = false

[tool.hatch.metadata]
allow-direct-references = true
